--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,214 @@
-.App {
-  text-align: center;
-}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  body {
+    padding: 2rem 4rem;
+    width: 100vw;
+    height: 100vh;
+    background: #FFFFFF;
+    font-family: 'Inter', sans-serif;
   }
-}
+  
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h4 {
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
+  width: 100%;
+}
+main {
+  margin-top: 2em;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  background-color: white;
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile-section{
+  text-align: center;
+  padding-top: 2em;  
 }
+
+#profile__img {
+  align-items: center;
+  width: 88px;
+  height: 88px;
+  border: 2px blue solid;
+  border-radius: 50%;
+
+}
+
+.overlay {
+position: absolute;
+top: 2em;
+  width: 88px;
+  height: 88px;
+ text-align:  center;
+  border-radius: 50%;
+  background: rgba(52, 64, 84, 0.75);
+  cursor: pointer;
+  opacity: 0;
+}
+.overlay:hover {
+  opacity: 1;
+}
+
+
+.cam__icon {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 50%;
+  transform: translateX(-50%);}
+  #slack{
+    display: none;
+  }
+
+  .menu {
+    position: absolute;
+    right: 20%;
+  }
+  .mobile_menu_image, .desktop_share_image{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px dashed #D0D5DD;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+  .mobile_menu_image:hover, .desktop_share_image:hover {
+    background: #D0D5DD;
+  }
+  .mobile_menu_image{
+    position: relative;
+    top: 40px;
+    right: 37px;
+    display: none;
+   width: auto;
+   height: auto;
+  }
+  .desktop_share_image {
+    position: relative;
+    top: 2em;
+    right: 10em;
+  }
+
+
+.link_tree {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+.links{
+  height: 76px;
+  margin-top: 10px;
+}
+
+.link_tree .links {
+  padding: 24px 32px;
+  background: #EAECF0;
+  text-decoration: none;
+  color: #101818;
+  font-size: 18px;
+  font-weight: 600;
+  width: 100%;
+  border-radius: 8px;
+  max-width: 1155px;
+  text-align: center;}
+  .link_tree .links:hover {
+    background: #D0D5DD;
+  }
+  .social_link{
+    margin: 2rem 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    align-items: center;
+  }
+  .slack_icon{
+    display: flex;
+    flex-direction: column;
+  }
+  .lower_icon{
+    position: relative;
+    top: -10px;
+  }
+  .social_links > * {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+  }
+  footer {
+    margin: 0 auto;
+    margin-top: 5em;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    border-top: 1px solid #EAECF0;
+    row-gap: 5em;
+  }
+  footer > * {
+    max-width: 100%;
+    height: auto;
+  }
+  .zuri-id{
+    right: 150px;
+    position: relative;
+ 
+}
+.red-dot{
+  position: relative;
+  right: 135px;
+  top: -5px;
+} 
+
+
+
+  .i4g-logo{
+    position: relative;
+    left: 20em;
+  }
+  footer p {
+    text-align: center;
+    font-weight: 400;
+    color: #667085;
+  }
+  @media screen and (max-width: 768px) {
+    body {
+      padding: 2rem 1rem;
+    }
+    .menu {
+      right: 1rem;
+    }
+    .mobile_menu_image {
+      display: flex;
+     width: auto;
+    }
+    .desktop_share_image{
+      display: none;
+    }
+    footer {
+      display: none;
+    }
+  }
+
